refactoring for config endpoints - new structure of result from get all values endpoint - new endpoint to update value only - proper date format for GET endpoint
